--- a/src/components/CollectionTypeList/CollectionTypeList.scss
+++ b/src/components/CollectionTypeList/CollectionTypeList.scss
@@ -1,8 +1,17 @@
 .collection-list {
-    display: flex;
-    flex-direction: column;
-    .list-items {
-        width: 20%;
-        justify-content: center;
+    .eachcollectiontype {
+        width: 150px;
+        height: 50px;
+        // margin: 18px 58px 18px 11px;
+        opacity: 0.4;
+        font-family: Montserrat;
+        font-size: 20px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.43;
+        letter-spacing: normal;
+        color: #ffffff;
+        align-items: center;
     }
 }
