--- a/src/components/CollectionTypeList/CollectionTypeList.scss
+++ b/src/components/CollectionTypeList/CollectionTypeList.scss
@@ -13,5 +13,13 @@
         letter-spacing: normal;
         color: #ffffff;
         align-items: center;
+
+
+        // width: 1081px;
+        // height: 54px;
+        // padding: 19px 24px 17px 34px;
+        // border-radius: 8px;
+        // box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
+        // background-color: #ffffff;
     }
 }
