--- a/src/components/ContentTypeField/ContentTypeField.scss
+++ b/src/components/ContentTypeField/ContentTypeField.scss
@@ -1,8 +1,16 @@
 .edit-field {
-    // width: 500px;
+    width: 400px;
     height: 54px;
     // padding: 18px 299px 17px 301px;
     border-radius: 8px;
     border: solid 1px #2f04ce;
     background-color: rgba(255, 255, 255, 0.5);
+    position: relative;
+
+    // width: 744px;
+    // height: 54px;
+    // padding: 0 32px 0 0;
+    // border-radius: 8px;
+    // box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
+    // background-color: #ffffff;
 }
