--- a/src/components/ContentTypeList/ContentTypeList.scss
+++ b/src/components/ContentTypeList/ContentTypeList.scss
@@ -5,3 +5,12 @@
 //     opacity: 0.1;
 //     background-color: #000000;
 // }
+
+.contenttypecard {
+    width: 800px;
+    height: 54px;
+    padding: 0 32px 0 0;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
+    background-color: #ffffff;
+}
