--- a/src/components/ContentTypePage/ContentTypePage.scss
+++ b/src/components/ContentTypePage/ContentTypePage.scss
@@ -23,4 +23,13 @@
         border: solid 1px #2f04ce;
         background-color: rgba(255, 255, 255, 0.5);
     }
+
+    .content-field {
+        width: 744px;
+        height: 54px;
+        padding: 0 32px 0 0;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
+        background-color: #ffffff;
+    }
 }
