--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -3,9 +3,9 @@
     height: 800px;
     padding: 0 0 390px;
     background-color: #272727;
-  display: flex;
+//   display: flex;
   flex-direction: column;
-//   align-items: space-around;
+  align-items: space-around;
 
 .collectiontypes {
     width: 146px;
@@ -28,6 +28,7 @@
     margin: 0 0 36px;
     padding: 16px 190px 12px 23px;
     background-color: #5904ce;
+    color: whitesmoke;
   
   }
 //   .collectiontypes {
@@ -59,6 +60,11 @@
     line-height: 1.43;
     letter-spacing: normal;
     color: #b4b4b4;
+
+    a {
+        position: relative;
+        bottom:40px;
+    }
   }
 }
 
