--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -64,6 +64,8 @@
     a {
         position: relative;
         bottom:40px;
+        background-color: black;
+        color: blanchedalmond;
     }
   }
 }
